--- a/estilo.css
+++ b/estilo.css
@@ -81,6 +81,7 @@ body * {
 }
 
 #switch button {
+    cursor: pointer;
     width: 32px;
     height: 32px;
     background: white var(--switch-bg-url) no-repeat center;
@@ -91,13 +92,16 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-back 0.6s forwards;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.6s forwards;
 }
 
+#switch button:hover {
+    outline: 8px solid var(--highlight--color);
+}
 
 /* Define o estilo da lista de links */
 ul {
@@ -185,5 +189,23 @@ footer{
 
     .light {
         --bg-url: url(./fotos-projeto-X/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0; 
     }
 }
