--- a/estilo.css
+++ b/estilo.css
@@ -209,3 +209,39 @@ footer{
         left: 0; 
     }
 }
+
+#like-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+  }
+  
+  #like-button {
+    cursor: pointer;
+    font-size: 24px; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    transition: transform 0.2s, box-shadow 0.2s;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  
+  #like-button:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px var(--highlight--color);
+  }
+  
+  #like-button.liked {
+    color: red;
+  }
+  
+  #like-count {
+    color: var(--text-color);
+    font-size: 14px;
+    margin-left: 8px; 
+  }
+  
