--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,7 @@
     --surface-color: rgba(255, 255, 255, 0.05); 
     --surface-color-hover: rgba(0, 0, 0, 0.2);
     --highlight--color: rgba(255, 255, 255, 0.2);
-    --switch-bg-url: url(./fotos-projeto-x/moon-stars.svg);
+    --switch-bg-url: url(./fotos-projeto-X/moon-stars.svg);
 }
 
 .light{
@@ -22,7 +22,7 @@
     --surface-color: rgba(255, 255, 255, 0.1);
     --surface-color-hover: rgba(0, 0, 0, 0.2);
     --highlight--color: rgba(0, 0, 0, 0.308);
-    --switch-bg-url: url(./fotos-projeto-x/sun.svg);
+    --switch-bg-url: url(./fotos-projeto-X/sun.svg);
 }
 
 /* Define o estilo do plano de fundo do corpo da página */
